[gd_scene load_steps=6 format=3 uid="uid://co1bkrp65g0vs"]

[ext_resource type="PackedScene" uid="uid://b015k1yn15a7c" path="res://assets/plot_developments/EnergyGenIsland.blend" id="1_xe1l2"]
[ext_resource type="Script" uid="uid://nyoq8o4rqvoc" path="res://scenes/actors/plotdevelopments/energy/energy_gen.gd" id="2_qjhcn"]
[ext_resource type="Material" uid="uid://cocc5ouw71hc5" path="res://shaders/outlineshader.tres" id="3_hpkmb"]
[ext_resource type="Material" uid="uid://7wbqquq8c83u" path="res://shaders/Highlight.tres" id="4_1tf5m"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1tf5m"]
size = Vector3(2.865, 1.31, 1.445)

[node name="EnergyGenIsland" node_paths=PackedStringArray("orbitCenter") instance=ExtResource("1_xe1l2")]
script = ExtResource("2_qjhcn")
orbitCenter = NodePath("TowerCenter")
orbitRadius = 4.0
zibWorkingCapacity = 4
workType = 1
zibCountBaseMultiplier = 1.5
plotHUDTitle = "Resource Generator"
plotHUDDescription = "Produces either energy or Zabs. Click the switch to toggle between production types."

[node name="Tower" parent="." index="0"]
surface_material_override/1 = ExtResource("3_hpkmb")

[node name="Path" parent="." index="1"]
surface_material_override/1 = ExtResource("3_hpkmb")

[node name="Gate" parent="." index="2"]
surface_material_override/2 = ExtResource("3_hpkmb")

[node name="Machine" parent="." index="3"]
surface_material_override/1 = ExtResource("3_hpkmb")
surface_material_override/2 = ExtResource("3_hpkmb")

[node name="Energy" parent="." index="5"]
unique_name_in_owner = true

[node name="Switch" parent="." index="6"]
unique_name_in_owner = true
surface_material_override/1 = ExtResource("4_1tf5m")

[node name="Zab" parent="." index="7"]
unique_name_in_owner = true

[node name="SwitchArea" type="Area3D" parent="." index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4111843, 0, -4.929982)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SwitchArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.1052647, 4.201577, 0)
shape = SubResource("BoxShape3D_1tf5m")

[connection signal="input_event" from="SwitchArea" to="." method="_on_switch_area_input_event"]
[connection signal="mouse_entered" from="SwitchArea" to="." method="_on_switch_area_mouse_entered"]
[connection signal="mouse_exited" from="SwitchArea" to="." method="_on_switch_area_mouse_exited"]
